--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGO_URI=mongodb://mongo:27017/zeptodb
+      -  MONGO_URI: mongodb://mongo:27017/zeptodb
     depends_on:
       - mongo
 
