--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject"
     
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://backend:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
