Add category-based product route

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 // ✅ .env (Environment Variables)
-MONGO_URI=mongodb://localhost:27017/Zepto
+# MONGO_URI=mongodb://localhost:27017/Zepto
+MONGO_URI=mongodb://13.203.224.133:27017/zeptodb
 JWT_SECRET=supersecret123
 PORT=5000
 RAZORPAY_KEY_ID=rzp_test_E01z2ODVLZlILq
